# XAI_Final_Project

./: .gitignore  README.md  api.py  logs.txt  main.py  package-lock.json  pyproject.toml  run_api.ps1  run_api.sh  run_frontend.ps1  test_xai.py
backend/: __init__.py  audio_models.py  config.py  spectrogram_converter.py  test_audio.py  utils.py  validators.py  verify_installation.py  xai_utils.py
backend/audio_deepfake/: __init__.py  audio_models.py  config.py  deepfake_detector.py  examples.py  test_audio.py  utils.py  validators.py  verify_installation.py  xai_explainer.py  xai_explainer_old.py  xai_utils.py
backend/lung_cancer/: __init__.py  config.py  example.py  predictor.py  utils.py  visualizer.py  xai.py
frontend/src/routes/: __root.tsx  index.tsx
